# distributed-chat-servers

./: .gitignore  CMakeLists.txt  README.md  dump.rdb  hot.md  test.cpp
assets/: gdbattach多线程调试方法.md  nginx负载均衡配置.md  redis发布订阅问题.md  一致性哈希算法.md  开发日志01-网络模块.md  开发日志02-服务端-用户登录与注册-业务模块.md  开发日志03-服务端-用户登录与注册-业务模块.md  开发日志07-客户端-通信功能详述.md  扩展与细节.md  线程安全与竞态条件问题.md  负载均衡与redis发布订阅.md
client/: CMakeLists.txt
client/include/: data.h  head.h  imfunc.h  menu.h  subthread.h  sys.h
client/src/: CMakeLists.txt  data.cpp  imfunc.cpp  main.cpp  menu.cpp  subthread.cpp  sys.cpp  temp.cpp
doc/: Q1-6.gdbattach多线程调试方法.md  Q2-1.保证消息在客户端时序显示.md  Q2-2.数据明文传输的安全问题.md  Q2-3.如何保证消息的可靠传输 - 副本.md  Q2-3.如何保证消息的可靠传输.md  Q2-4.关于历史消息存储问题.md  Q2-5.服务端如何感知客户端的状态.md  Q2-6.消息队列的替代.md  Q3.redis发布订阅与负载均衡.md  Q4.nginx负载均衡算法.md  Q5.客户端的简单线程通信模型.md  Q8.关于事件回调机制.md  nginx负载均衡配置.md  开发日志01-网络模块.md  开发日志02-数据模块.md  开发日志03-服务端-用户登录与注册-业务模块.md  开发日志04-服务端-用户单聊与好友逻辑-业务模块.md  开发日志05-服务端-用户群聊与群聊逻辑-业务模块.md  开发日志06-客户端-主线程与子线程.md  开发日志07-客户端-通信功能详述.md  开发日志08-服务端-服务器集群提升并发能力.md  项目介绍.md
example/: CMakeLists.txt
muduo_example/: lambda1.cpp  lambda2.cpp  server
muduo_test/: muduo_server.cpp
server/: CMakeLists.txt  chat.sql  chatServer.conf  dump.rdb
server/example/: json.cpp  lambda3.cpp  muduo_server.cpp
server/src/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp  server.cpp
server/src/db/: db.cpp
server/src/model/: FriendModel.cpp  GroupModel.cpp  OffMessageModel.cpp  UserModel.cpp
server/src/redis/: redis.cpp
server/src/service/: chatservice.cpp
server/src/utils/: read.cpp
(+22 files in other folders)
